--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri = mongodb+srv://MuthurajD:4cYsXHg6A0XPbmmP@cluster0.gos8i.mongodb.net/todoapp?retryWrites=true&w=majority
-spring.data.mongodb.database = todoapp
+spring.data.mongodb.uri = mongodb+srv://MuthurajD:4cYsXHg6A0XPbmmP@cluster0.gos8i.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.database = test
